Fixed side nav overlap

--- a/dd5e-client/src/app/app.component.scss
+++ b/dd5e-client/src/app/app.component.scss
@@ -19,22 +19,6 @@ nav a.active {
   background-color: black;
 }
 
-.example-spacer {
+.menu-spacer {
   flex: 1 1 auto;
-}
-
-.example-container {
-  width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.example-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
-.example-sidenav {
-  padding: 20px;
 }
